<resources>
    <string name="app_name">ThriftSkool</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_loginsignupscreen">Log In</string>
    <string name="signup_loginsignupscreen">Sign Up</string>
    <string name="title_activity_login_signup_screen_">LoginSignupScreen_Activity</string>
    <string name="username_loginscreen">Email</string>
    <string name="email_loginscreen">Enter your email address</string>
    <string name="password_loginscreen">Password</string>
    <string name="submit_loginscreen">Log In</string>
    <string name="blankpassword_alert_loginscreen">Password can not be Blank.</string>
    <string name="blankemail_alert_loginscreen">Email Address can not be Blank.</string>
    <string name="title_activity_login_screen_">LoginScreen_Activity</string>
    <string name="forgotpassworg_loginscreen"><u>Forgot Password</u></string>
    <string name="forgotusername_loginscreen"><u>Forgot Username</u></string>
    <string name="email_signupscreen">Email</string>
    <string name="username_signupscreen">Full name</string>
    <string name="password_signupscreen">Password</string>
    <string name="confirmpassword_signupscreen">Confirm password</string>
    <string name="blank_email_signupscreen">Email Address can not be blank.</string>
    <string name="blank_password_signupscreen">Password can not be blank.</string>
    <string name="blank_confirmpassword_signupscreen">Confirm Password can not be blank.</string>
    <string name="passwordnotmatch_alert_signupscreen">password and confirm password should be the same.</string>
    <string name="submit_signupscreen">Register Now</string>
    <string name="privacypolicy_signupscreen">I have read the <u>Privacy Policy</u> and agree to the <u>Terms of Use</u></string>
    <string name="agreetc_signupscreen">you must agree to Privacy Policy.</string>
    <string name="universityid_alert_signupscreen">Select university</string>
    <string name="title_activity_signup_screen_">SignupScreen_Activity</string>
    <string name="home_hometabscreen">Home</string>
    <string name="post_hometabscreen">Post</string>
    <string name="profile_hometabscreen">Profile</string>
    <string name="deals_hometabscreen">Deals</string>
    <string name="buzz_hometabscreen">Buzz</string>
    <string name="search_hometabscreen">&#xf002; Search</string>
    <string name="title_contactusscreen">Contect Us</string>
    <string name="entermessage_contactusscreen">Enter message...</string>
    <string name="messagetext_contactusscreen">Please let us know that you are enjoying ThriftSkool and if there is anything we can do to improve your experience with us!</string>
    <string name="price_high_to_low_filterpopup">Price - High to Low</string>
    <string name="price_low_to_heigh_filterpopup">Price - Low to High</string>
    <string name="expirydate_soone_to_later_filterpopup">Expiry Date - Sooner to Later</string>
    <string name="expirydate_later_to_soone_filterpopup">Expiry Date - Later to Sooner</string>
    <string name="expired_changestatuspopup">Expired</string>
    <string name="close_changestatuspopup">Closed</string>
    <string name="delete_changestatuspopup">Delete</string>
    <string name="expired_aleart_changestatuspopup">Your post has been expired.</string>
    <string name="close_aleart_changestatuspopup">Your post has been closed.</string>
    <string name="delete_aleart_changestatuspopup">Your post has been deleted.</string>
    <string name="expired_buzz_aleart_changestatuspopup">Your buzz has been expired.</string>
    <string name="close_buzz_aleart_changestatuspopup">Your buzz has been closed.</string>
    <string name="delete_buzz_aleart_changestatuspopup">Your buzz has been deleted.</string>
    <string name="Alert_msgPost">Are you sure you want to delete this post ?</string>
    <string name="Alert_msgBuzz">Are you sure you want to delete this Buzz ?</string>
    <string name="addphoto_postscreen">Add Photo</string>
    <string name="title_postscreen">CREATE POST</string>
    <string name="title1_postscreen">Title</string>
    <string name="choosecategory_postscreen">Choose category</string>
    <string name="description_postscreen">Description</string>
    <string name="price_postscreen">Price</string>
    <string name="expirydate_postscreen">Expiration date</string>
    <string name="submit_postscreen">Post</string>
    <string name="category_alert_postscreen">Please select Category.</string>
    <string name="photo_alert_postscreen">Please select at list one photo.</string>
    <string name="title_alert_postscreen">Please enter Title.</string>
    <string name="description_alert_postscreen">Please enter Discription.</string>
    <string name="price_alert_postscreen">Please enter Price</string>
    <string name="expirydate_alert_postscreen">Please select Expiry Date.</string>
    <string name="agreetc_alert_postscreen">you must agree to Privacy Policy.</string>
    <string name="privacypolicy_postscreen">I have read the <u>Privacy Policy</u> and agree to the <u>Terms of Use.</u>\n\nAll response will be sent to your ThriftSkool inbox.\n\nAll posts have a 30 day maximum posting period.</string>
    <string name="privacypolicy1_postscreen">All response will be sent to your ThriftSkool inbox.\n\nAll posts have a 30 day maximum posting period..</string>
    <string name="privacypolicy_createbuzzscreen">I have read the <u>Privacy Policy</u> and agree the to Terms of Use </string>
    <string name="report_createlistdetailscreen">Report  &#xf06a;</string>
    <string name="email_createlistdetailscreen">Reply  &#xf0e0;</string>
    <string name="cotact_createlistdetailscreen">Add Photo</string>
    <string name="profile_createlistdetailscreen">Profile &#xf007;</string>
    <string name="viewcode_createlistdetailscreen">View Code</string>
    <string name="title_profilescreen">MY PROFILE</string>
    <string name="mypost_profilescreen">My Posts</string>
    <string name="watchlist_profilescreen">Watch List</string>
    <string name="inbox_profilescreen">Messages</string>
    <string name="editprofile_profilescreen">Edit Profile</string>
    <string name="changepassword_profilescreen">Change Password</string>
    <string name="contactappadmin_profilescreen">Contact App Admin</string>
    <string name="invite_friend_profilescreen">Invite Friends</string>
    <string name="signout_profilescreen">Sign-out</string>
    <string name="signoutalert_profilescreen">Are you sure want to sign out?</string>
    <string name="email_mypostdetailscreen">Edit post &#xf044;</string>
    <string name="emailbuzz_mypostdetailscreen">Edit buzz &#xf044;</string>
    <string name="call_mypostdetailscreenPost">Delete Post &#xf0ec;</string>
    <string name="call_mypostdetailscreenBuzz">Delete Buzz &#xf0ec;</string>
    <string name="call_mypostdetailscreen">Change  Status &#xf0ec;</string>
    <string name="title_changepasswordscreen">CHANGE PASSWORD</string>
    <string name="oldpass_changepasswordscreen">Old Password</string>
    <string name="newpass_changepasswordscreen">New Password</string>
    <string name="confipass_changepasswordscreen">Confirm New Password</string>
    <string name="save_changepasswordscreen">Change Password</string>
    <string name="passwordnotmatch_alert_changepasswordscreen">Please enter correct Password.</string>
    <string name="oldpassword_alert_changepasswordscreen">Old Password can not be Blank.</string>
    <string name="newpassword_alert_changepasswordscreen">New Password can not be Blank.</string>
    <string name="confirmpassword_alert_changepasswordscreen">Confirm New Password can not be Blank</string>
    <string name="university_editprofilescreen">Select university</string>
    <string name="email_editprofilescreen">Email address</string>
    <string name="class_editprofilescreen">Class</string>
    <string name="name_editprofilescreen">Name</string>
    <string name="username_editprofilescreen">Username</string>
    <string name="university_alert_editprofilescreen">If you change your university all of your posts, deals and buzz data will be cleared. Do you still want to change your university?</string>
    <string name="title_buzzdetailscreen">CAMPUS BUZZ</string>
    <string name="title_privacypolicyscreen">Privacy Policy</string>
    <string name="privacypolicy_privacypolicyscreen">Privacy Policy</string>
    <string name="title_mypostlistscreen">MY POSTS</string>
    <string name="title_createnewuniversityscreen">University not Listed?</string>
    <string name="text_createnewuniversityscreen">Please enter your university email below so we know to get ThriftSkool on your campus and can notify you when it’s unlocked, thanks!</string>
    <string name="internetconnection_alert">Your device is not connected with Internet. Please check your device Internet settings.</string>
    <string name="invalideemailid_alert_signupscreen">Please enter valid email address.</string>
    <string name="blank_postlist_alert">Selected category does not have any posts yet.</string>
    <string name="blank_mypostlist_alert">You have not created any post or buzz for your university.</string>
    <string name="blank_deallist_alert">There is no deal available for your university.</string>
    <string name="blank_buzzlist_alert">There is no buzz available for your university.</string>
    <string name="blank_watchlist_alert">Your watch list is blank.</string>
    <string name="blank_mymessagelist_alert">Your message list is blank.</string>
    <string name="blank_searchresultlist_alert">There is no post available matching to your search keyword.</string>
    <string name="blank_title_alert">Please enter title.</string>
    <string name="blank_choosecategory_alert">Please select one post category.</string>
    <string name="blank_expirydate_alert">Please enter expiry date.</string>
    <string name="blank_privacypolicy_alert">Please accept privacy policy.</string>
    <string name="blank_selectuniversity_alert">Please select your university.</string>
    <string name="blank_selectuniversity_name">Please enter your name.</string>
    <string name="blank_selectuniversity_class">Please select your class.</string>
    <string name="blank_email_alert">Please enter your email address.</string>
    <string name="blank_username_alert">Please enter your user full name.</string>
    <string name="blank_searchbox_alert">Please enter search keyword.</string>
    <string name="blank_oldpassword_alert">Please enter old password.</string>
    <string name="blank_newpassword_alert">Please enter new password.</string>
    <string name="blank_confirmpassword_alert">Please enter confirm password.</string>
    <string name="blank_confirmnewpassword_alert">Please enter new confirm password.</string>
    <string name="blank_password_alert">Please enter password.</string>
    <string name="blank_newoldpassmatch_alert">New password and confirm password should be the same.</string>
    <string name="blank_messagebox_alert">Please enter message text.</string>
    <string name="blank_universityname_alert">Please enter your university name.</string>
    <string name="blank_universitycontactemail_alert">Please enter university email address.</string>
    <string name="blank_universitycontactusername_alert">Please enter username.</string>
    <string name="blank_editprofileName_alert">Please enter your rname.</string>
    <string name="blank_editprofileImage_alert">Please select your profile image.</string>
    <string name="blank_mostrecentpost_alert">Your university does not have any posts yet.</string>
    <string name="blank_notificationlist_alert">You have no notifications at this time.</string>
    <string name="alert_title">Alert!</string>
    <string name="server_report_alert">Your feedback has been recorded.</string>
    <string name="server_favorite_alert">Post has been added to your watch list.</string>
</resources>