<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
    >

    <include
        layout="@layout/header"
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="10dp"
            >

            <com.thriftskool.thriftskool1.widgets.EditTextMyriadProRegular

                android:textSize="18sp"
                android:id="@+id/ChangePasswordScreen_OldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/oldpass_changepasswordscreen"
                android:background="@drawable/post"
                android:inputType="textPassword"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="@color/color_textcolor"
                android:textColorHint="@color/color_hinttextcolor"

                />



            <com.thriftskool.thriftskool1.widgets.EditTextMyriadProRegular

                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:id="@+id/ChangePasswordScreen_NewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newpass_changepasswordscreen"
                android:background="@drawable/post"
                android:inputType="textPassword"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="@color/color_textcolor"
                android:textColorHint="@color/color_hinttextcolor"
                />



            <com.thriftskool.thriftskool1.widgets.EditTextMyriadProRegular

                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:id="@+id/ChangePasswordScreen_ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confipass_changepasswordscreen"
                android:background="@drawable/post"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:textColor="@color/color_textcolor"
                android:textColorHint="@color/color_hinttextcolor"
                />





            <com.thriftskool.thriftskool1.widgets.TextViewMyriadProBold

                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:id="@+id/ChangePasswordScreen_ChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_changepasswordscreen"
                android:background="@drawable/postsubmit"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/color_white"
                />




        </LinearLayout>












</LinearLayout>
