<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:background="@drawable/splash"
                >


<ImageView
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:id="@+id/LoginSignupScreen_Logo"
    android:layout_centerInParent="true"
    />


        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginBottom="20dp"

            >
            <com.thriftskool.thriftskool1.widgets.TextViewMyriadProBold

                android:id="@+id/LoginSignupScreen_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_loginsignupscreen"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/login"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/color_white"

                />

            <com.thriftskool.thriftskool1.widgets.TextViewMyriadProBold
                android:id="@+id/LoginSignupScreen_Signup"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_loginsignupscreen"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/login"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/color_white"

                />

            <TextView

                android:visibility="gone"
                android:id="@+id/LoginSignupScreen_ForgotPassword"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgotpassworg_loginscreen"
                android:gravity="center"
                android:padding="10dp"
                />


        </LinearLayout>

</RelativeLayout>
